--- a/index.html
+++ b/index.html
@@ -1,12 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
-</html>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Marck+Script&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    </link>
 
+    <link rel="stylesheet" href="style.css">
+    <title>Carta de </title>
+</head>
+
+<body>
+    <div id="hearts-container" class="absolute inset-0"></div>
+    <h1>¡Feliz San Valentín!</h1>
+    <div class="container">
+        <div class="envelope-wrapper ">
+            <div class="envelope">
+                <div class="letter">
+                    <div class="text">
+                        <strong>Querida Jhoselin</strong>
+                        <p>
+                            Hoy quiero tomarme un momento para recordarte lo extraordinaria que eres. No necesito un día
+                            especial como San Valentín para decirte que tu luz brilla con una intensidad que ilumina
+                            todo a tu alrededor.
+                            <br> <br>
+                            Mereces todo lo bueno que la vida tiene para ofrecer, y quiero que sepas que siempre estaré
+                            aquí para
+                            apoyarte en cada paso de tu camino de la forma en que pueda.
+                            <br> <br>
+                            No necesito un motivo específico para recordarte cuánto te valoro y cuánto creo en ti. Estoy
+                            emocionado por todo lo que el futuro
+                            tiene reservado para ti. Sigue brillando y persiguiendo tus sueños.
+                            <br> <br>
+                            Con todo mi amor y admiración, te dedico este par de canciones
+                            <br> <br>
+                            <a class="fon-ca" style="margin-top: 20px;" href="https://www.youtube.com/watch?v=K3QZVxqFEGE" target="_blank">
+                                Los Panchos - Algo contigo
+                            </a>
+                            <a class="fon-ca" style="margin-top: 10px; display: block;" href="https://www.youtube.com/watch?v=K3QZVxqFEGE" target="_blank">
+                                Lafourcade - Soledad y el Mar 
+                            </a>
+                            
+                        </p>
+
+                    </div>
+                </div>
+            </div>
+            <div class="heart"></div>
+            <div class="tap-right"></div>
+            <div class="tap-left"></div>
+        </div>
+    </div>
+
+    <script src="script.js"></script>
+</body>
+
+</html>
