--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                             <a class="fon-ca" style="margin-top: 20px;" href="https://www.youtube.com/watch?v=K3QZVxqFEGE" target="_blank">
                                 Los Panchos - Algo contigo
                             </a>
-                            <a class="fon-ca" style="margin-top: 10px; display: block;" href="https://www.youtube.com/watch?v=K3QZVxqFEGE" target="_blank">
+                            <a class="fon-ca" style="margin-top: 10px; display: inline-block;" href="https://www.youtube.com/watch?v=K3QZVxqFEGE" target="_blank">
                                 Lafourcade - Soledad y el Mar 
                             </a>
                             
