--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
                             todo a tu alrededor.
                             <br> <br>
                             Mereces todo lo bueno que la vida tiene para ofrecer, y quiero que sepas que siempre estaré
-                            aquí para
-                            apoyarte en cada paso de tu camino de la forma en que pueda.
+                            aquí para apoyarte en cada paso de tu camino de la forma en que pueda.
                             <br> <br>
                             No necesito un motivo específico para recordarte cuánto te valoro y cuánto creo en ti. Estoy
                             emocionado por todo lo que el futuro
