--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </link>
 
     <link rel="stylesheet" href="style.css">
-    <title>Carta de </title>
+    <title>Ojitos Lindos</title>
 </head>
 
 <body>
@@ -35,6 +35,11 @@
                             emocionado por todo lo que el futuro
                             tiene reservado para ti. Sigue brillando y persiguiendo tus sueños.
                             <br> <br>
+                            Aún recuerdo como de casualidad llegaste a mi vida, desde que te ví despertaste cosas en mi, te quedaste en mi vida y luego de tanto tiempo tus ojitos causan debilidad en mi corazón.
+                            <br> <br>
+                            Siendo aquello que siempre quise y nunca pude tener te quedaste en mi vida y en mi corazón. Soy esa pequeña extrella que siempre esta órbitando alrededor de la luna, apreciando como la luna es tan radiante y hermosa, pero nunca llega a tenerla, si quiera tocarla (Observa la luna por un par de días... Y verás de que hablo).
+                            No quiero ser esa pequeña estrella siempre, espero me des la oportunidad de demostrar aquello que causas en mi.                            
+                            <br> <br>
                             Con todo mi amor y admiración, te dedico este par de canciones
                             <br> <br>
                             <a class="fon-ca" style="margin-top: 20px;" href="https://www.youtube.com/watch?v=K3QZVxqFEGE" target="_blank">
@@ -43,7 +48,6 @@
                             <a class="fon-ca" style="margin-top: 10px; display: inline-block;" href="https://www.youtube.com/watch?v=K3QZVxqFEGE" target="_blank">
                                 Lafourcade - Soledad y el Mar 
                             </a>
-                            
                         </p>
 
                     </div>
